# splash-build-system

./: CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt
src/splash/: CMakeLists.txt  main.cpp  splash.h
src/splashbuild/: CMakeLists.txt  FindCompilers.cpp  main.cpp  splashbuild.h
src/splashbuild-launcher/: CMakeLists.txt  main.cpp  splashbuild-launcher.h
src/splashcore/: BoardInfoFile.cpp  BoardInfoFile.h  BuildConfiguration.cpp  BuildConfiguration.h  BuildFlag.cpp  BuildFlag.h  BuildGraph.cpp  BuildGraph.h  BuildGraphNode.cpp  BuildGraphNode.h  BuildJob.cpp  BuildJob.h  BuildSettings.cpp  BuildSettings.h  CMakeLists.txt  CPPExecutableNode.cpp  CPPExecutableNode.h  CPPObjectNode.cpp  CPPObjectNode.h  CPPSharedLibraryNode.cpp  CPPSharedLibraryNode.h  CPPSourceNode.cpp  CPPSourceNode.h  CPPToolchain.cpp  CPPToolchain.h  CToolchain.cpp  CToolchain.h  Cache.cpp  Cache.h  ClientSettings.cpp  ClientSettings.h  ConstantTableNode.cpp  ConstantTableNode.h  DependencyCache.cpp  DependencyCache.h  DependencyScanJob.cpp  DependencyScanJob.h  FPGABitstreamNode.cpp  FPGABitstreamNode.h  FPGAToolchain.cpp  (+46 more)
src/splashctl/: BuildClientThread.cpp  CMakeLists.txt  Cache.cpp  Cache.h  ClientThread.cpp  DevClientThread.cpp  NodeManager.cpp  NodeManager.h  UIClientThread.cpp  WorkingCopy.cpp  WorkingCopy.h  main.cpp  protocol.h  splashctl.h
src/splashdev/: CMakeLists.txt  ChangeNotifier.cpp  FileEventHandlers.cpp  main.cpp  splashdev.h
src/spmake/: CMakeLists.txt  main.cpp
tests/MultiArch/: Splashfile  build.yml  main.cpp
tests/MultiArch/src/: build.yml  main.cpp
